# ThermoQA

./: .gitignore  CLAUDE.md  README.md  THERMOQA_HANDOFF.md  TIER2_DESIGN.md  TIER3_DESIGN.md  TIER3_DESIGN_V2.md  env.example  pyproject.toml  requirements.txt
analysis/: comprehensive_report.md  deep_investigation_report.md
data/tier1_properties/: metadata.json  questions.jsonl
data/tier2_components/: metadata.json  questions.jsonl
data/tier3_cycles/: metadata.json  questions.jsonl
evaluation/: extractor.py  llm_extractor.py  report.py  runner.py  scorer.py
generation/: cycle_state_generator.py  ground_truth.py  param_sampler.py  question_generator.py  state_generator.py
generation/templates/: tier1_properties.py  tier2_components.py  tier3_cycles.py
results/anthropic/: aggregate.json  batch_id.txt  summary.json
scripts/: aggregate_runs.py  comprehensive_analysis.py  deep_investigation.py  generate_tier1.py  generate_tier2.py  generate_tier3.py  patch_variable_cp_ground_truth.py  publish_huggingface.py  reextract.py  reextract_tier2.py  reextract_tier3.py  rescore_tier3.py  run_batch_anthropic.py  run_batch_anthropic_tier2.py  run_batch_anthropic_tier3.py  run_batch_google_tier2.py  run_batch_google_tier3.py  run_batch_openai.py  run_batch_openai_tier2.py  run_batch_openai_tier3.py  run_batch_xai.py  run_batch_xai_tier2.py  run_batch_xai_tier3.py  run_evaluation.py  run_evaluation_tier2.py  run_evaluation_tier3.py  test_scorer.py  validate_coolprop.py  verify_tier3_prepublish.py
taxonomy/: tier1_properties.yaml  tier2_components.yaml  tier3_cycles.yaml
(+143 files in other folders)
